2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sp40/init.c: Avoid unsupported test cases.

2011-08-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spfatal13/testcase.h: Fixed test name.
	* spfatal05/testcase.h: Increased wait time for slow hardware.
	* spfatal_support/init.c: Print test name at end of test.
	* spfatal01/spfatal01.scn, spfatal02/spfatal02.scn,
	spfatal03/spfatal03.scn, spfatal04/spfatal04.scn,
	spfatal05/spfatal05.scn, spfatal06/spfatal06.scn,
	spfatal07/spfatal07.scn, spfatal08/spfatal08.scn,
	spfatal09/spfatal09.scn, spfatal10/spfatal10.scn,
	spfatal11/spfatal11.scn, spfatal12/spfatal12.scn,
	spfatal13/spfatal13.scn, spfatal14/spfatal14.scn,
	spfatal15/spfatal15.scn, spfatal16/spfatal16.scn,
	spfatal17/spfatal17.scn, spfatal18/spfatal18.scn,
	spfatal19/spfatal19.scn, spfatal20/spfatal20.scn,
	spfatal21/spfatal21.scn, spfatal22/spfatal22.scn,
	spfatal23/spfatal23.scn, spfatal24/spfatal24.scn,
	spfatal25/spfatal25.scn: Reflect changes from above.

2011-08-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1899/testing
	* spfatal14/Makefile.am: Adjust number of semaphores to consume to
	trigger fatal error.

2011-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1899/testing
	* spfatal14/Makefile.am, spfatal15/Makefile.am, spfatal16/Makefile.am:
	Adjust number of semaphores to consume to trigger fatal error.

2011-08-21	Petr Benes <benesp16@fel.cvut.cz>

	PR 1886/cpukit
	* sprbtree01/init.c, sprbtree01/sprbtree01.scn: This patch enables
	inserting duplicate keys into rbtree. It is possible to turn on this
	feature when initializing the tree.

2011-08-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spfatal_support/init.c: Ensure that _Thread_BSP_context is
	initialized.

2011-08-02	Petr Benes <benesp16@fel.cvut.cz>

	PR 1883/testing
	* sprbtree01/init.c: Attempt provide coverage on last two ranges.

2011-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1877/cpukit