@@ -1,2 +1,3 @@
+*** TEST FATAL 1 ***
 Fatal error (Classic API Init task create failure) hit
 *** END OF TEST FATAL 1 ***
