@@ -1,2 +1,3 @@
+*** TEST FATAL 2 ***
 Fatal error (Classic API Init task start failure) hit
 *** END OF TEST FATAL 2 ***
