@@ -1,2 +1,3 @@
+*** TEST FATAL 13 ***
 Fatal error (Configuration of unlimited and maximum of 0) hit
 *** END OF TEST FATAL 13 ***
