@@ -1,2 +1,3 @@
+*** TEST FATAL 14 ***
 Fatal error (fail to open stdout) hit
 *** END OF TEST FATAL 14 ***
