@@ -1,2 +1,3 @@
+*** TEST FATAL 15 ***
 Fatal error (fail to open stderr) hit
 *** END OF TEST FATAL 15 ***
