@@ -1,2 +1,3 @@
+*** TEST FATAL 16 ***
 Fatal error (termios sem create #1) hit
 *** END OF TEST FATAL 16 ***
