@@ -1,2 +1,3 @@
+*** TEST FATAL 17 ***
 Fatal error (termios sem create #2) hit
 *** END OF TEST FATAL 17 ***
