@@ -1,2 +1,3 @@
+*** TEST FATAL 18 ***
 Fatal error (termios sem create #3) hit
 *** END OF TEST FATAL 18 ***
