@@ -1,2 +1,3 @@
+*** TEST FATAL 19 ***
 Fatal error (termios sem create #4) hit
 *** END OF TEST FATAL 19 ***
